Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>ARIA</h1>
-        <p>Retinal vessel analysis software for MATLAB</p>
+        <p>Retinal vessel analysis with MATLAB</p>
 
         <p class="view"><a href="https://github.com/petebankhead/ARIA">View the Project on GitHub <small>petebankhead/ARIA</small></a></p>
 
